--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
              <div class="teach-video">
 
              </div>
-            <button id="edu-v" class="verify-button2" onclick="EDU();">verify</button>
+            <button style="display: none;" id="edu-v" class="verify-button2" onclick="EDU();">verify</button>
             <button class="close-button4">close</button>
         </div>
 
