--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <a target="_blank" href="https://drive.google.com/file/d/1iMra-7hRGT1DD1tgXj_jphDLJ5oorHhQ/view?usp=sharing"><i class="fa-brands fa-youtube"></i> 碰撞(中)</a>
                     <a target="_blank" href="https://drive.google.com/file/d/1HTJPh_tn-1DNnY8mHBrHUhAMi_XIPpbM/view?usp=sharing"><i class="fa-brands fa-youtube"></i> 碰撞(下)</a>
                 </div>
-             <span class="declare">純屬個人教學演練使用，非公開/商用性資源。</span>
+             <span class="declare" style="color: brown;">純屬個人教學演練使用，非公開/商用性資源。</span>
              <div class="teach-video">
 
              </div>
