--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
             <li>
                 <img src="images/javascript.png" alt="">
                 <div class="skill-text">JavaScript</div>
-                <div class="level2">學習</div>
+                <div class="level2" style="background: brown ;">9月</div>
             </li>
             <li>
                 <img src="images/bootstrap.png" alt="">
                 <div class="skill-text">BootStrap</div>
-                <div class="level2">學習</div>  
+                <div class="level2" style="background: brown ;">9月</div>  
             </li>
             <li style="display: none;">
                 <img class="vue" src="images/vue.png" alt=""> 
@@ -315,17 +315,17 @@
             <li>
                 <img src="images/Curso-de-Java-EE.png"  alt=""> 
                 <div class="skill-text">JavaEE</div>
-                <div class="level2">學習</div>
+                <div class="level2" style="background: brown ;">10月</div>
             </li>
             <li>
                 <img src="images/spring-framework-logo-115631739970c79rwadnp-removebg-preview.png"  alt="">
                 <div class="skill-text">Spring</div>
-                <div class="level2">學習</div>
+                <div class="level2" style="background: gray ;">等待</div>
             </li>
             <li>
                 <img src="images/mySQL.png" alt="">
                 <div class="skill-text">MySQL</div>
-                <div class="level2">學習</div>
+                <div class="level2" style="background:gray ;">等待</div>
             </li>
         </ul>
     </div>
