--- a/plan.html
+++ b/plan.html
@@ -113,13 +113,13 @@
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
-                    <h2>SASS/SCSS</h2>
-                    <h4>2022.07.23</h4>
+                    <h2>JavaScript/BootStrap 基礎</h2>
+                    <h4>2022.09.13~2022.09.18</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
-                    <h2>JavaScript</h2>
-                    <h4>2022.07.24~2022.07.30</h4>
+                    <h2>JavaScript 全系列</h2>
+                    <h4>2022.10.17~2022.11.19</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box fc-box">
@@ -128,24 +128,18 @@
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
-                    <h2>DOM/AJAX</h2>
-                    <h4></h4>
+                    <h2>Bootstrap 全系列</h2>
+                    <h4>2022.11.20~2022.12.01</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
-                    <h2>JavaScript延伸與複習</h2>
-                    <h4></h4>
-                </div>
-                <i class="fa-solid fa-arrow-down ic-row"></i>
-
-                <div class="session-box">
-                    <h2>BootStrap</h2>
-                    <h4></h4>
+                    <h2>JavaScript 高級</h2>
+                    <h4>2022.12.02~2022.12.31</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
-                    <h2>排版作品集</h2>
-                    <h4></h4>
+                    <h2>AJAX</h2>
+                    <h4>2023.02</h4>
                 </div>
             </div>
             <div class="bed">
@@ -171,6 +165,26 @@
                     <div class="session-box fc-box">
                         <h2> Java OCPJP SE 11 國證</h2>
                         <h4>2022.09.03 <i class="fa-regular fa-circle-check check "></i></h4>
+                    </div>
+                <i class="fa-solid fa-arrow-down ic-row"></i>
+                    <div class="session-box">
+                        <h2> Java OCE JWCD 自主學習</h2>
+                        <h4>2022.09.19~2022.10.16</h4>
+                    </div>
+                <i class="fa-solid fa-arrow-down ic-row"></i>
+                    <div class="session-box">
+                        <h2> Java OCE JWCD (一）</h2>
+                        <h4>2022.11.12~2023.01.14</h4>
+                    </div>
+                <i class="fa-solid fa-arrow-down ic-row"></i>
+                    <div class="session-box fc2-box">
+                        <h2>Java OCE 考前衝刺</h2>
+                        <h4>2022.12.26~2023.01.24</h4>
+                    </div>
+                <i class="fa-solid fa-arrow-down ic-row"></i>
+                    <div class="session-box fc-box">
+                        <h2> Java OCE JWCD 國證</h2>
+                        <h4>2023.01.31</h4>
                     </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box fc2-box">
@@ -204,16 +218,6 @@
                     <div class="session-box">
                         <h2>Java Spring （二）</h2>
                         <h4>2023.03.17~2023.05.22</h4>
-                    </div>
-                    <i class="fa-solid fa-arrow-down ic-row"></i>
-                    <div class="session-box fc2-box">
-                        <h2>Java OCE 考前衝刺</h2>
-                        <h4>2023.03.17~2023.05.22</h4>
-                    </div>
-                    <i class="fa-solid fa-arrow-down ic-row"></i>
-                    <div class="session-box fc-box">
-                        <h2> Java OCE JWCD 國證</h2>
-                        <h4>2023.06</h4>
                     </div>
                     <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box">
