--- a/plan.html
+++ b/plan.html
@@ -113,23 +113,18 @@
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
-                    <h2>JavaScript/BootStrap 基礎</h2>
-                    <h4>2022.09.13~2022.09.18</h4>
+                    <h2>JavaScript</h2>
+                    <h4>2022.09.13~2022.09.30</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
-                    <h2>JavaScript 全系列</h2>
-                    <h4>2022.10.17~2022.11.19</h4>
+                    <h2>Bootstrap</h2>
+                    <h4>2022.10.01~2022.10.06</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box fc-box">
                     <h2>前端工程師企業實習（一）</h2>
                     <h4>2022.11.01~2023.05.01</h4>
-                </div>
-                <i class="fa-solid fa-arrow-down ic-row"></i>
-                <div class="session-box">
-                    <h2>Bootstrap 全系列</h2>
-                    <h4>2022.11.20~2022.12.01</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
@@ -169,7 +164,7 @@
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box">
                         <h2> Java OCE JWCD 自主學習</h2>
-                        <h4>2022.09.19~2022.10.16</h4>
+                        <h4>2022.10.07~2022.11.11</h4>
                     </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box">
