--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/jquery2.2.3.min.js"></script>
     <script src="js/index.js"></script>
     <!-- css -->
+    <link rel="apple-touch-icon" size="180x180" href="images/mode-standard-phoenix-svgrepo-com.svg">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/index.css">
