--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-title" content="SCLemon">
     <!-- js -->
     <script src="js/jquery2.2.3.min.js"></script>
     <script src="js/index.js"></script>
