--- a/plan.html
+++ b/plan.html
@@ -113,13 +113,13 @@
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
-                    <h2>JavaScript</h2>
-                    <h4>2022.09.13~2022.09.30</h4>
+                    <h2>JavaScript 全系列</h2>
+                    <h4>2022.09.13~2022.10.1</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
                     <h2>Bootstrap</h2>
-                    <h4>2022.10.01~2022.10.06</h4>
+                    <h4>2022.10.02~2022.10.04</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box fc-box">
@@ -128,13 +128,18 @@
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
-                    <h2>JavaScript 高級</h2>
-                    <h4>2022.12.02~2022.12.31</h4>
+                    <h2>React.JS</h2>
+                    <h4></h4>
+                </div>
+                <i class="fa-solid fa-arrow-down ic-row"></i>
+                <div class="session-box">
+                    <h2>Vue.JS</h2>
+                    <h4></h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
                     <h2>AJAX</h2>
-                    <h4>2023.02</h4>
+                    <h4></h4>
                 </div>
             </div>
             <div class="bed">
