--- a/plan.html
+++ b/plan.html
@@ -114,12 +114,12 @@
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
                     <h2>JavaScript 全系列</h2>
-                    <h4>2022.09.13~2022.10.1</h4>
+                    <h4>2022.09.13~2022.10.09</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
                     <h2>Bootstrap</h2>
-                    <h4>2022.10.02~2022.10.04</h4>
+                    <h4>2022.10.02~2022.10.09</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box fc-box">
@@ -128,18 +128,13 @@
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
-                    <h2>React.JS</h2>
-                    <h4></h4>
+                    <h2>React</h2>
+                    <h4>2023.02.01~2023.02.28</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
-                    <h2>Vue.JS</h2>
-                    <h4></h4>
-                </div>
-                <i class="fa-solid fa-arrow-down ic-row"></i>
-                <div class="session-box">
-                    <h2>AJAX</h2>
-                    <h4></h4>
+                    <h2>Vue</h2>
+                    <h4>2023.03.01~2023.04.01</h4>
                 </div>
             </div>
             <div class="bed">
@@ -169,7 +164,7 @@
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box">
                         <h2> Java OCE JWCD 自主學習</h2>
-                        <h4>2022.10.07~2022.11.11</h4>
+                        <h4>2022.10.05~2022.11.31</h4>
                     </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box">
@@ -179,7 +174,7 @@
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box fc2-box">
                         <h2>Java OCE 考前衝刺</h2>
-                        <h4>2022.12.26~2023.01.29</h4>
+                        <h4>2022.12.01~2023.01.29</h4>
                     </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box fc-box">
@@ -221,8 +216,13 @@
                     </div>
                     <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box">
-                        <h2> Java 企業框架實作</h2>
+                        <h2>SpringFramework</h2>
                         <h4>2023.06~2024.05</h4>
+                    </div>
+                    <i class="fa-solid fa-arrow-down ic-row"></i>
+                    <div class="session-box">
+                        <h2>Oracle DBA</h2>
+                        <h4>2023.06~2025.06</h4>
                     </div>
                     <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box">
