--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <li>
                 <img src="images/javascript.png" alt="">
                 <div class="skill-text">JavaScript</div>
-                <div class="level2" style="background: brown ;">9月</div>
+                <div class="level2" style="background: red ;">進階</div>
             </li>
             <li>
                 <img src="images/bootstrap.png" alt="">
