--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <li>
                 <img src="images/pngegg.png" alt=""> 
                 <div class="skill-text">JQuery</div>
-                <div class="level2">基礎</div>
+                <div class="level2">中等</div>
             </li>
             <li style="display: none;">
                 <img src="images/sass-logo.png" alt=""> 
@@ -295,7 +295,7 @@
             <li>
                 <img src="images/javascript.png" alt="">
                 <div class="skill-text">JavaScript</div>
-                <div class="level2" style="background: red ;">進階</div>
+                <div class="level2">中等</div>
             </li>
             <li>
                 <img src="images/bootstrap.png" alt="">
