--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script>
+        var now =new Date().getMilliseconds();
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -343,6 +346,9 @@
                         <option value="7">7. 不確定度計算機網頁版</option>
                         <option value="8">8. JDBC的應用與串連</option>
                         <option value="9">9. OCPJP SE 11 Developer</option>
+                        <option value="10">10. JavaScript 自學筆記</option>
+                        <option value="11">11. Yun 蘭嶼日記</option>
+                        <option value="12">12. 高雄一日遊</option>
                 </select>
             </div>
             <div class="search-ico-1">
@@ -352,7 +358,82 @@
         <h1 class="animate__animated">Recent Project</h1>
         <p>See more about these on my <a href="https://github.com/SC1314520">GitHub</a></p>
         <div>
-        <div class="content show9 animate__animated" id="9" >
+            <div class="content show9 animate__animated" id="12" >
+                <div class="href">
+                    <img src="images/card.png" alt="">
+                    <a target="_blank" href="https://sc1314520.github.io/Card.github.io/"><div class="content-img-text">
+                        <span class="content-img-text-1">前往頁面</span>
+                    </div></a>
+                </div>
+                <div class="introduction">
+                    <div class="intro-text">
+                        <h1>作品七：與云寶的高雄一日遊</h1>
+                        <p>專為我和Yun的二十歲生日所製作的紀錄</p>
+                    </div>
+                    <div class="intro-text-2">
+                        基本技巧：HTML/CSS/JavaScript<br/>
+                        程式運用：VScode<br>
+                        注意事項：此為手機版網頁（ 375 px )
+                    </div>
+                    <div class="intro-text-3">
+                        製作時間：2022.10.09
+                    </div>
+                    <div class="intro-text-4">
+                        詳細傳送門：<a target="_blank" href="https://sc1314520.github.io/Card.github.io/">點擊連結</a>
+                    </div>
+                </div>
+            </div>
+            <div class="content show9 animate__animated" id="11" >
+                <div class="href">
+                    <img src="images/lanyu.png" alt="">
+                    <a  href="#"><div class="content-img-text">
+                        <span class="content-img-text-1">暫時不開放</span>
+                    </div></a>
+                </div>
+                <div class="introduction">
+                    <div class="intro-text">
+                        <h1>作品六：Yun 的蘭嶼日記</h1>
+                        <p>紀錄云寶的蘭嶼旅遊的快樂時光</p>
+                    </div>
+                    <div class="intro-text-2">
+                        基本技巧：HTML/CSS/jQuery/RWD<br/>
+                        程式運用：VScode<br>
+                        注意事項：目前本作品暫不開放欣賞。
+                    </div>
+                    <div class="intro-text-3">
+                        製作時間：2022.09.15
+                    </div>
+                    <div class="intro-text-4">
+                        詳細傳送門：<a  href="#">暫不開放</a>
+                    </div>
+                </div>
+            </div>
+            <div class="content show9 animate__animated" id="10" >
+                <div class="href">
+                    <img src="images/jsself.png" alt="">
+                    <a target="_blank" href="https://github.com/sc1314520/JavaScript-self"><div class="content-img-text">
+                        <span class="content-img-text-1">前往頁面</span>
+                    </div></a>
+                </div>
+                <div class="introduction">
+                    <div class="intro-text">
+                        <h1>JavaScript 學習筆記</h1>
+                        <p>在YouTube上學習完整的JavaScript技巧並統整成筆記</p>
+                    </div>
+                    <div class="intro-text-2">
+                        基本技巧：JavaScript<br/>
+                        程式運用：VScode<br>
+                        學習頻道：尚硅谷IT培訓學校<br/>
+                    </div>
+                    <div class="intro-text-3">
+                        製作時間：2022.09.13~2022.10.19
+                    </div>
+                    <div class="intro-text-4">
+                        詳細傳送門：<a target="_blank" href="https://github.com/sc1314520/JavaScript-self">點擊連結</a>
+                    </div>
+                </div>
+            </div>
+        <div class="content show9 animate__animated page-close" id="9" >
             <div class="href">
                 <img src="images/cert.png" alt="">
                 <a target="_blank" href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=9230CD0C820DD47EF3D54217A6A4EDD5609AC36B30F76316D878FD0E91CA71E6&fbclid=IwAR0vr51vKVbulH1HprnKIG7xrz-rMNyhIuLSowPSK3xYacO_Rh_-6NJhWd4"><div class="content-img-text">
@@ -378,7 +459,7 @@
                 </div>
             </div>
         </div>
-        <div class="content show8 animate__animated" id="8" >
+        <div class="content show8 animate__animated page-close" id="8" >
             <div class="href">
                 <img src="images/db.png" alt="">
                 <a target="_blank" href="https://github.com/sc1314520/OCPJP_2022-07/tree/main/OCPJP/src/Basic/JDBC_2"><div class="content-img-text">
@@ -404,7 +485,7 @@
                 </div>
             </div>
         </div>
-        <div class="content show7 animate__animated" id="7" >
+        <div class="content show7 animate__animated page-close" id="7" >
             <div class="href">
                 <img src="images/dom.png" alt="">
                 <a target="_blank" href="https://sc1314520.github.io/analyze.github.io/"><div class="content-img-text">
@@ -639,5 +720,10 @@
         </div>
     </div>
    <script src="https://kit.fontawesome.com/026fbb8b51.js" crossorigin="anonymous"></script>
+<script>
+    var end =new Date().getMilliseconds();
+    var total =end-now;
+    alert("此為電腦版網頁，請使用電腦欣賞。 加載時長："+total+"ms");
+</script>
 </body>
 </html>
