--- a/academic.html
+++ b/academic.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -434,5 +435,9 @@
     </div>
 
 </body>
-
+<script>
+    var end =new Date().getMilliseconds();
+    var total =end-now;
+    alert("此為電腦版網頁，請使用電腦欣賞。 加載時長："+total+"ms");
+</script>
 </html>
