--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
    <script src="https://kit.fontawesome.com/026fbb8b51.js" crossorigin="anonymous"></script>
 <script>
     var end =new Date().getMilliseconds();
-    var total =end-now;
+    var total =Math.abs(end-now);
     alert("此為電腦版網頁，請使用電腦欣賞。 加載時長："+total+"ms");
 </script>
 </body>
