--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                 <div class="introduction">
                     <div class="intro-text">
                         <h1>作品六：Yun 的蘭嶼日記</h1>
-                        <p>紀錄云寶的蘭嶼旅遊的快樂時光</p>
+                        <p>紀錄Yun的蘭嶼旅遊的快樂時光</p>
                     </div>
                     <div class="intro-text-2">
                         基本技巧：HTML/CSS/jQuery/RWD<br/>
