--- a/academic.html
+++ b/academic.html
@@ -136,10 +136,10 @@
                     <th>數學物理一</th>
                     <th>實驗物理一</th>
                     <th>生理心理學</th>
-                    <th>電子學</th>
-                    <th>亞裔文學</th>
+                    <th>日本美術</th>
+                    <th>ITS</th>
                     <th>OCPJP</th>
-                    <th>ORACLE</th>
+                    <th>OCEJWCD</th>
                     <th>前端工程師</th>
                     <th>學分數</th>
                     <th>GPA</th>
@@ -154,11 +154,11 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <th>none</th>
-                    <th>外修</th>
+                    <th>國際認證</th>
+                    <th>國際認證</th>
                     <th>外修</th>
                     <th>企業實習</th>
-                    <td>22<span class="ext"> +12</span></td>
+                    <td>19<span class="ext"> +16</span></td>
                     <td>none</td>
                 </tr>
             </table>
