--- a/index.html
+++ b/index.html
@@ -303,12 +303,12 @@
             <li style="display: none;">
                 <img src="images/bootstrap.png" alt="">
                 <div class="skill-text">BootStrap</div>
-                <div class="level2" style="background: brown ;">9月</div>  
+                <div></div>  
             </li>
             <li>
                 <img class="vue" src="images/vue.png" alt=""> 
                 <div class="skill-text">Vue.js</div>
-                <div class="level2">學習</div>
+                <div class="level2" style="background: brown ;">12月</div>
             </li>
             <li>
                 <img src="images/java.png" alt=""> 
@@ -318,7 +318,7 @@
             <li>
                 <img src="images/Curso-de-Java-EE.png"  alt=""> 
                 <div class="skill-text">JavaEE</div>
-                <div class="level2" style="background: brown ;">10月</div>
+                <div class="level2" style="background: brown ;">12月</div>
             </li>
             <li>
                 <img src="images/spring-framework-logo-115631739970c79rwadnp-removebg-preview.png"  alt="">
